--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <h1 id="md">素因数分解アラーム</h1>
     <p id="date">(取得できへんかった)</p>
     <p><button onclick="location.href='2.html'">2桁</button>　超絶簡単だよ</p>
-    <p><button onclick="location.href='#'">3桁</button>　簡単だよ</p>
-    <p><button onclick="location.href='#'">4桁</button>　ちょっとむずいよ</p>
-    <p><button onclick="location.href='#'">5桁</button>　むずいよ</p>
+    <p><button onclick="location.href='#'">3桁</button>　開発中</p>
+    <p><button onclick="location.href='#'">4桁</button>　開発中</p>
+    <p><button onclick="location.href='#'">5桁</button>　開発中</p>
     <p id="cr"><small>copyright &copy; 2023 Laughin</small></p>
 </body>
 </html>
