--- a/2.html
+++ b/2.html
@@ -7,7 +7,7 @@
     <link href="style.css" rel="stylesheet">
     <script src="jquery-3.6.0.min.js"></script>
     <script src="script2.js"></script>
-    <title>2桁</title>
+    <title>初心者向け</title>
 </head>
 <body>
 <div id="remove">
@@ -16,7 +16,7 @@
         <source src="alerm.ogg" type="audio/ogg">
         <source src="alerm.wav" type="audio/wav">
     </audio>
-    <h1>2桁の素因数分解</h1>
+    <h1>初心者向けの素因数分解</h1>
     <div id="ta">
         <p>時間を入力してください(半角)</p>
         <p>時間：　<input id="t1" type="text" required minlength="1" maxlength="2" size="3"><br /></p>
