--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
     <h1 id="md">素因数分解アラーム</h1>
     <p id="date">(取得できへんかった)</p>
-    <p><button onclick="location.href='2.html'">2桁</button>　超絶簡単だよ</p>
-    <p><button onclick="location.href='#'">3桁</button>　開発中</p>
-    <p><button onclick="location.href='#'">4桁</button>　開発中</p>
-    <p><button onclick="location.href='#'">5桁</button>　開発中</p>
+    <p><button onclick="location.href='2.html'">初心</button>　超絶簡単だよ</p>
+    <p><button onclick="location.href='#'">初級</button>　開発中</p>
+    <p><button onclick="location.href='#'">中級</button>　開発中</p>
+    <p><button onclick="location.href='#'">5上級</button>　開発中</p>
     <p id="cr"><small>copyright &copy; 2023 Laughin</small></p>
 </body>
 </html>
