--- a/2.html
+++ b/2.html
@@ -7,7 +7,7 @@
     <link href="style.css" rel="stylesheet">
     <script src="jquery-3.6.0.min.js"></script>
     <script src="script2.js"></script>
-    <title>初心者向け</title>
+    <title>初心</title>
 </head>
 <body>
 <div id="remove">
@@ -16,7 +16,7 @@
         <source src="alerm.ogg" type="audio/ogg">
         <source src="alerm.wav" type="audio/wav">
     </audio>
-    <h1>初心者向けの素因数分解</h1>
+    <h1>初心の素因数分解</h1>
     <div id="ta">
         <p>時間を入力してください(半角)</p>
         <p>時間：　<input id="t1" type="text" required minlength="1" maxlength="2" size="3"><br /></p>
@@ -28,7 +28,7 @@
     <div id="An"><p>A:<br /><input id="q1" type="text" required minlength="1" maxlength="2" size="3"><br /><input id="q2" type="text" required minlength="1" maxlength="2" size="3"><br /></p>
     <button id="Ab" onclick="an()">答える</button></div>
     <div id="kn"></div>
-    </d><p id="date">(取得できへんかった...)</p>
+    </d><p id="date">申し訳ございませんが<br />お使いのブラウザは対応していません</p>
     <p id="cr"><small>copyright &copy; 2023 Laughin</small></p>
 </body>
 </html>
