--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <p><button onclick="location.href='2.html'">初心</button>　超絶簡単だよ</p>
     <p><button onclick="location.href='#'">初級</button>　開発中</p>
     <p><button onclick="location.href='#'">中級</button>　開発中</p>
-    <p><button onclick="location.href='#'">5上級</button>　開発中</p>
+    <p><button onclick="location.href='#'">上級</button>　開発中</p>
     <p id="cr"><small>copyright &copy; 2023 Laughin</small></p>
 </body>
 </html>
