--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <h1 id="md">素因数分解アラーム</h1>
     <p id="date">申し訳ございませんが<br />お使いのブラウザは対応していません</p>
-    <p><button onclick="location.href='2.html'">初心</button>　超絶簡単だよ</p>
+    <p><button onclick="location.href='2.html'">初心</button>　初心者向けの素因数分解</p>
     <p><button onclick="location.href='#'">初級</button>　開発中</p>
     <p><button onclick="location.href='#'">中級</button>　開発中</p>
     <p><button onclick="location.href='#'">上級</button>　開発中</p>
