--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <html lang="ja">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
     <link href="icon.ico" rel="icon" >
     <link href="style.css" rel="stylesheet">
     <script src="jquery-3.6.0.min.js"></script>
