--- a/2.html
+++ b/2.html
@@ -7,7 +7,7 @@
     <link href="style.css" rel="stylesheet">
     <script src="jquery-3.6.0.min.js"></script>
     <script src="script2.js"></script>
-    <title>初心</title>
+    <title>素因数分解アラーム(初心)</title>
 </head>
 <body>
 <div id="remove">
