--- a/2.html
+++ b/2.html
@@ -3,7 +3,6 @@
 <html lang="ja">
 <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <link href="icon.ico" rel="icon">
     <link href="style.css" rel="stylesheet">
     <script src="jquery-3.6.0.min.js"></script>
@@ -23,11 +22,11 @@
         <p>時間：　<input id="t1" type="text" required minlength="1" maxlength="2" size="3"><br /></p>
         <p>　分：　<input id="t2" type="text" required minlength="1" maxlength="2" size="3"><br /></p>
 
-        <button class="button is-text" onclick="doclick()">OK</button>
+        <button onclick="doclick()">OK</button>
         <a href="index.html">Back</a>
     </div>
     <div id="An"><p>A:<br /><input id="q1" type="text" required minlength="1" maxlength="2" size="3"><br /><input id="q2" type="text" required minlength="1" maxlength="2" size="3"><br /></p>
-    <button id="Ab" class="button is-text" onclick="an()">答える</button></div>
+    <button id="Ab" onclick="an()">答える</button></div>
     <div id="kn"></div>
     </d><p id="date">申し訳ございませんが<br />お使いのブラウザは対応していません</p>
     <p id="cr"><small>copyright &copy; 2023 Laughin</small></p>
