--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <html lang="ja">
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <link href="icon.ico" rel="icon" >
     <link href="style.css" rel="stylesheet">
     <script src="jquery-3.6.0.min.js"></script>
@@ -13,10 +12,10 @@
 <body>
     <h1 id="md">素因数分解アラーム</h1>
     <p id="date">申し訳ございませんが<br />お使いのブラウザは対応していません</p>
-    <p><button class="button is-text" onclick="location.href='2.html'">初心</button>　初心者向けの素因数分解</p>
-    <p><button class="button is-text" onclick="location.href='#'">初級</button>　開発中</p>
-    <p><button class="button is-text" onclick="location.href='#'">中級</button>　開発中</p>
-    <p><button class="button is-text" onclick="location.href='#'">上級</button>　開発中</p>
+    <p><button onclick="location.href='2.html'">初心</button>　初心者向けの素因数分解</p>
+    <p><button onclick="location.href='#'">初級</button>　開発中</p>
+    <p><button onclick="location.href='#'">中級</button>　開発中</p>
+    <p><button onclick="location.href='#'">上級</button>　開発中</p>
     <p id="cr"><small>copyright &copy; 2023 Laughin</small></p>
 </body>
 </html>
