--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="ja">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="icon.ico" rel="icon" >
     <link href="style.css" rel="stylesheet">
     <script src="jquery-3.6.0.min.js"></script>
