--- a/2.html
+++ b/2.html
@@ -20,8 +20,8 @@
     <h1>初心の素因数分解</h1>
     <div id="ta">
         <p>時間を入力してください(半角)</p>
-        <p>時間：　<input id="t1" type="text"  placeholder="Numder" required minlength="1" maxlength="2" size="4"><br /></p>
-        <p>　分：　<input id="t2" type="text"  placeholder="Number" required minlength="1" maxlength="2" size="4"><br /></p>
+        <p>時間：　<input id="t1" type="text"  placeholder="Hour" required minlength="1" maxlength="2" size="4"><br /></p>
+        <p>　分：　<input id="t2" type="text"  placeholder="Minuts" required minlength="1" maxlength="2" size="4"><br /></p>
 
         <button onclick="doclick()">OK</button>
         <a href="index.html">Back</a>
