--- a/2.html
+++ b/2.html
@@ -3,6 +3,7 @@
 <html lang="ja">
 <head>
     <meta charset="utf-8" />
+    <meta name="description" content="素因数分解しないと止めれないアラームです。(初心者向け)">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="icon.ico" rel="icon">
     <link href="style.css" rel="stylesheet">
