--- a/2.html
+++ b/2.html
@@ -18,7 +18,7 @@
         <source src="alerm.ogg" type="audio/ogg">
         <source src="alerm.wav" type="audio/wav">
     </audio>
-    <h1>素因数分解(初心者向け)</h1>
+    <h1>素因数分解アラーム(初心者向け)</h1>
     <div id="ta">
         <p>時間を入力してください(半角)</p>
         <p>時間：　<input id="t1" type="text"  placeholder="Hour" required minlength="1" maxlength="2" size="5"><br /></p>
