--- a/2.html
+++ b/2.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="icon.ico" rel="icon">
     <link href="style.css" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+     <script src="jquery-3.6.0.min.js"></script>
     <script src="script2.js"></script>
     <title>素因数分解アラーム(初心)</title>
 </head>
