--- a/2.html
+++ b/2.html
@@ -107,6 +107,7 @@ $(function () {
         <source src="alerm.mp3" type="audio/mp3">
         <source src="alerm.wav" type="audio/wav">
         <source src="alerm.ogg" type="audio/ogg">
+        このブラウザでは対応していません
     </audio>
     <h1>素因数分解アラーム(初心者向け)</h1>
     <div id="ta">
