--- a/2.html
+++ b/2.html
@@ -103,10 +103,7 @@ $(function () {
 </head>
 <body>
 <div id="remove">
-    <audio id="audio">
-        <source src="alerm.mp3" type="audio/mp3">
-        <source src="alerm.wav" type="audio/wav">
-        <source src="alerm.ogg" type="audio/ogg">
+    <audio src="alerm.wav">
         このブラウザでは対応していません
     </audio>
     <h1>素因数分解アラーム(初心者向け)</h1>
