--- a/2.html
+++ b/2.html
@@ -76,8 +76,8 @@ function doclick() {
                 nhm = String(h)+"時"+String(m)+"分";
                 if (hm == nhm && tap =< 1) {
                     tap += 1;
-                    $("#audio").get(0).play();
-                    $("#audio").get(0).loop = true;
+                    $("audio").get(0).play();
+                    $("audio").get(0).loop = true;
                     $("#so").show();
                     $("#An").show();
                 }
