--- a/2.html
+++ b/2.html
@@ -118,7 +118,7 @@ $(function () {
     <div id="An"><p>A:<br /><input id="q1" type="text"  placeholder="Prime Number" required minlength="1" maxlength="2" size="5"><br /><input id="q2" type="text"  placeholder="Prime Number" required minlength="1" maxlength="2" size="5"><br /></p>
     <button id="Ab" onclick="an()">答える</button></div>
     <div id="kn"></div>
-    </d><p id="date">申し訳ございませんが<br />お使いのブラウザは対応していません</p>
+    </div><p id="date">申し訳ございませんが<br />お使いのブラウザは対応していません</p>
     <p id="cr"><small>copyright &copy; 2023 Laughin</small></p>
 </body>
 </html>
