--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 
 <html lang="ja">
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-62M4YMFB2E"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-62M4YMFB2E');
+</script>
     <meta charset="utf-8">
     <meta name="description" content="素因数分解しないと止めれないアラームです。">
     <meta name="viewport" content="width=device-width, initial-scale=1">
