--- a/2.html
+++ b/2.html
@@ -103,7 +103,7 @@ $(function () {
 </head>
 <body>
 <div id="remove">
-    <audio src="alerm.wav">
+    <audio src="alerm.wav" muted>
         このブラウザでは対応していません
     </audio>
     <h1>素因数分解アラーム(初心者向け)</h1>
@@ -122,3 +122,4 @@ $(function () {
     <p id="cr"><small>copyright &copy; 2023 Laughin</small></p>
 </body>
 </html>
+
