--- a/2.html
+++ b/2.html
@@ -77,7 +77,7 @@ function doclick() {
                 if (hm == nhm && tap <= 1) {
                     tap += 1;
                     $("audio").get(0).play();
-                    $("audio").get(0).loop = true;
+                    /*$("audio").get(0).loop = true;*/
                     $("#so").show();
                     $("#An").show();
                 }
@@ -122,4 +122,5 @@ $(function () {
     <p id="cr"><small>copyright &copy; 2023 Laughin</small></p>
 </body>
 </html>
+
 
