--- a/2.html
+++ b/2.html
@@ -77,7 +77,7 @@ function doclick() {
                 if (hm == nhm && tap <= 1) {
                     tap += 1;
                     $("audio").get(0).play();
-                    /*$("audio").get(0).loop = true;*/
+                    $("audio").get(0).loop = true;
                     $("#so").show();
                     $("#An").show();
                 }
@@ -103,7 +103,7 @@ $(function () {
 </head>
 <body>
 <div id="remove">
-    <audio src="alerm.wav" muted>
+    <audio src="alerm.wav" preload=”metadata”>
         このブラウザでは対応していません
     </audio>
     <h1>素因数分解アラーム(初心者向け)</h1>
@@ -122,5 +122,6 @@ $(function () {
     <p id="cr"><small>copyright &copy; 2023 Laughin</small></p>
 </body>
 </html>
+
 
 
