--- a/2.html
+++ b/2.html
@@ -29,7 +29,7 @@
                 alert("数値を入力してください");
             } else {
               if(va3 == PN[ran1] && va4 == PN[ran2]){
-                $("audio").get(0).pause();
+                audio.pause();
                 $("#remove").hide();
                 $('#remove').before('<h1 id="GM">Good morning!</h1>');
                 let abs = 0;
@@ -126,6 +126,7 @@
     <p id="cr"><small>copyright &copy; 2023 Laughin</small></p>
 </body>
 </html>
+
 
 
 
