--- a/2.html
+++ b/2.html
@@ -113,19 +113,25 @@
     <h1>素因数分解アラーム(初心者向け)</h1>
     <div id="ta">
         <p>時間を入力してください(半角)</p>
-        <p>時間：　<input id="t1" type="text"  placeholder="Hour" required minlength="1" maxlength="2" size="5"><br /></p>
-        <p>　分：　<input id="t2" type="text"  placeholder="Minuts" required minlength="1" maxlength="2" size="5"><br /></p>
+        <p>時間：　<input id="t1" type="text"  placeholder="Hour" required minlength="1" maxlength="2" size="15"><br /></p>
+        <p>　分：　<input id="t2" type="text"  placeholder="Minuts" required minlength="1" maxlength="2" size="15"><br /></p>
 
         <button onclick="doclick()">OK</button>
         <a href="index.html">Back</a>
     </div>
-    <div id="An"><p>A:<br /><input id="q1" type="text"  placeholder="Prime Number" required minlength="1" maxlength="2" size="5"><br /><input id="q2" type="text"  placeholder="Prime Number" required minlength="1" maxlength="2" size="5"><br /></p>
-    <button id="Ab" onclick="an()">答える</button></div>
-    <div id="kn"></div>
-    </div><p id="date">申し訳ございませんが<br />お使いのブラウザは対応していません</p>
+    <div id="An">
+        <p>A:<br />
+        <input id="q1" type="text"  placeholder="Prime Number" required minlength="1" maxlength="2" size="15"><br />
+        <input id="q2" type="text"  placeholder="Prime Number" required minlength="1" maxlength="2" size="15"><br />
+        </p>
+        <button id="Ab" onclick="an()">答える</button></div>
+        <div id="kn"></div>
+    </div>   
+    <p id="date">申し訳ございませんが<br />お使いのブラウザは対応していません</p>
     <p id="cr"><small>copyright &copy; 2023 Laughin</small></p>
 </body>
 </html>
+
 
 
 
